RESOLVED FIXED65618
[GTK] fullscreen/video-controls-override.html fails
https://bugs.webkit.org/show_bug.cgi?id=65618
Summary [GTK] fullscreen/video-controls-override.html fails
Philippe Normand
Reported 2011-08-03 06:57:51 PDT
Because the test implicitely depends on the fullscreenQuickTime.css file which GTK doesn't use. EVENT(webkitfullscreenchange) EXPECTED (shadowRoot = internals.shadowRoot(video) != 'null') OK EXPECTED (panel = shadowRoot.firstChild.firstChild != 'null') OK EXPECTED (internals.shadowPseudoId(panel) == '-webkit-media-controls-panel') OK EXPECTED (document.defaultView.getComputedStyle(panel)['display'] != 'none') OK EXPECTED (document.defaultView.getComputedStyle(panel)['height'] == '48px'), OBSERVED '600px' FAIL EVENT(webkitfullscreenchange) EXPECTED (document.defaultView.getComputedStyle(panel)['display'] == 'none') OK END OF TEST
Attachments
proposed patch (3.14 KB, patch)
2011-08-03 07:17 PDT, Philippe Normand
no flags
proposed patch (3.15 KB, patch)
2011-08-03 07:23 PDT, Philippe Normand
mrobinson: review+
gustavo: commit-queue-
Philippe Normand
Comment 1 2011-08-03 07:17:00 PDT
Created attachment 102782 [details] proposed patch
Philippe Normand
Comment 2 2011-08-03 07:17:56 PDT
Before landing this we should remove: DerivedSources/WebCore/UserAgentStyleSheetsData.cpp DerivedSources/WebCore/UserAgentStyleSheets.h on the bots. Or trigger a full-rebuild.
WebKit Review Bot
Comment 3 2011-08-03 07:20:04 PDT
Attachment 102782 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/gtk/RenderThemeGtk.cpp:482: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 4 2011-08-03 07:23:39 PDT
Created attachment 102784 [details] proposed patch
Martin Robinson
Comment 5 2011-08-03 07:36:59 PDT
Comment on attachment 102784 [details] proposed patch Okay.
Gustavo Noronha (kov)
Comment 6 2011-08-03 14:37:26 PDT
Comment on attachment 102784 [details] proposed patch Attachment 102784 [details] did not pass gtk-ews (gtk): Output: http://queues.webkit.org/results/9306088
Philippe Normand
Comment 7 2011-08-04 05:16:22 PDT
(In reply to comment #6) > (From update of attachment 102784 [details]) > Attachment 102784 [details] did not pass gtk-ews (gtk): > Output: http://queues.webkit.org/results/9306088 This was expected. :) Gustavo, I'm ready to land this, but it requires to remove 2 files in the build directory, as mentioned in comment 2. It'd be nice to synchronize ourselves on this patch-landing!
Philippe Normand
Comment 8 2011-08-04 06:45:07 PDT
Zoltan Horvath
Comment 9 2011-08-05 02:23:52 PDT
Note You need to log in before you can comment on or make changes to this bug.