        [GTK] fullscreen/video-controls-override.html fails         https://bugs.webkit.org/show_bug.cgi?id=65618

Reviewed by Martin Robinson.

        Implement extraFullScreenStyleSheet() and provide the QuickTime
        stylesheet for now, later we might want our own stylesheet.

        * GNUmakefile.am:
        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::RenderThemeGtk::extraFullScreenStyleSheet):
        * platform/gtk/RenderThemeGtk.h:

Canonical link: https://commits.webkit.org/81496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92370 268f45cc-cd09-0410-ab3c-d52691b4dbfc